# swarmpay

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
agents/coder/: AGENTS.md
agents/explorer/: AGENTS.md
agents/orchestrator/: AGENTS.md
agents/payer/: AGENTS.md
agents/planner/: AGENTS.md
agents/reviewer/: AGENTS.md
agents/treasurer/: AGENTS.md
benchmarks/: README.md
contracts/split-rewards/: Cargo.toml
contracts/split-rewards/.cargo/: config.toml
contracts/split-rewards/src/: error.rs  lib.rs  msg.rs  state.rs
docs/: HANDOFF-FINAL.md  HANDOFF.md  competitive-analysis.md  endpoint-scan-report.md  evo-topology-image-prompt.md  evomap-integration-audit.md  evomap-swarm-integration-plan.md  frontend-handoff-prompt.md  handoff-apikey-credits-flow.md  handoff-fullstack.md  handoff-playground-graph-integration.md  handoff-playground-real-swarm.md  handoff-vue-playground.md  icon-design-brief.md  playground-swarm-backend-contract.md  project-concept-analysis.md
public/: index.html
scripts/: demo-compare.ts  endpoint-harness.ts  fetch-model-icons.py  gen-injective-wallets.ts  gen-launch-video.mjs  playground-ui-harness.mjs  seed-official-fleets.ts  smoke-injective.ts  test-real-chain.ts  test-real-transfer.ts
src/: api-keys.ts  auth.ts  community.ts  config.ts  endpoints.ts  evolution-memory.ts  evomap-webhook.ts  evomap.ts  fleets.ts  log.ts  model.ts  oauth.ts  openai-types.ts  playground-demo.ts  server.ts  swarm.ts  url.ts
web/: App.vue  index.html  main.ts  router.ts  tsconfig.json  vite.config.ts
(+122 files in other folders)
