[package]
name = "split-rewards"
version = "0.1.0"
edition = "2021"
description = "SwarmPay on-chain split-rewards contract for Injective (CosmWasm)"
license = "MIT"
repository = "https://github.com/evoship-injective"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Injective ships CosmWasm (wasmd) with cosmwasm-vm 1.3.x compatibility.
# cosmwasm-std 2.x can target that capability level via the `cosmwasm_1_3` feature.
cosmwasm-std = { version = "2.0", default-features = false, features = ["std", "cosmwasm_1_3"] }
cw-storage-plus = "2.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "1.0" }

[dev-dependencies]
bech32 = "0.9"

# Smaller .wasm output + overflow checks for safety (matches cw-template convention).
# These only apply to `cargo build --release`; tests run in the dev/test profile and are unaffected.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
overflow-checks = true
panic = "abort"
